// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage should match snapshot for BNF 1`] = `
<div>
  <div
    class="homeWrapper"
  >
    <div
      class="hero"
      id="content-start"
    >
      <div
        class="heroContainer"
      >
        <nav
          aria-label="Breadcrumbs"
          class="breadcrumbs"
          data-component="breadcrumbs"
          role="navigation"
        >
          <ol
            class="breadcrumbs"
          >
            <li
              class="breadcrumbs__crumb"
            >
              <a
                href="https://www.nice.org.uk/"
              >
                NICE
              </a>
            </li>
            <li
              class="breadcrumbs__crumb"
            >
              <span>
                BNF
              </span>
            </li>
          </ol>
        </nav>
        <script
          type="application/ld+json"
        >
          {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "https://www.nice.org.uk/",
        "name": "NICE"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "name": "BNF"
      }
    }
  ]
}
        </script>
        <div
          class="body"
        >
          <div
            class="text"
          >
            <h1
              class="title"
            >
              British National Formulary
               (
              BNF
              )
            </h1>
            <p
              class="intro"
            >
              Key information on the selection, prescribing, dispensing and administration of medicines.
            </p>
          </div>
          <div
            class="lastUpdated"
            data-tracking="last-updated"
          >
            <h2
              class="lastUpdatedLabel"
            >
              Last updated: 
            </h2>
            <time
              class="lastUpdatedDate"
              datetime="2022-04-06T00:38:57.911"
            >
              6 April 2022
            </time>
            <a
              href="/about/changes/"
            >
              See what's changed
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="grid grid--loose"
      data-tracking="browse-a-to-z"
    >
      <div
        class="drugsColumn"
        data-component="grid-item"
        data-g="12 md:6"
      >
        <h2>
          Drugs
        </h2>
        <p>
          Drug monographs describe the uses, doses, safety issues, medicinal forms and other considerations involved in the use of a drug.
        </p>
        <h3
          class="h4"
        >
          Browse drugs by A to Z
        </h3>
        <ol
          class="alphabet alphabet--chunky alphabet"
          data-tracking="drugs-a-to-z"
          id="a-to-z"
        >
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#a"
            >
              A
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#b"
            >
              B
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#c"
            >
              C
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#d"
            >
              D
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#e"
            >
              E
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#f"
            >
              F
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#g"
            >
              G
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#h"
            >
              H
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#i"
            >
              I
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#j"
            >
              J
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#k"
            >
              K
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#l"
            >
              L
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#m"
            >
              M
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#n"
            >
              N
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#o"
            >
              O
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#p"
            >
              P
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#q"
            >
              Q
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#r"
            >
              R
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#s"
            >
              S
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#t"
            >
              T
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#u"
            >
              U
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#v"
            >
              V
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#w"
            >
              W
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#x"
            >
              X
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#y"
            >
              Y
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#z"
            >
              Z
            </a>
          </li>
        </ol>
      </div>
      <div
        class="featureColumn"
        data-component="grid-item"
        data-g="12 md:6"
      >
        <div>
          <h2>
            Treatment summaries
          </h2>
          <p>
            Browse an A to Z list of treatment summaries covering:
          </p>
          <ul>
            <li>
              drug use related to a particular body system
            </li>
            <li>
              drug management or treatment of common conditions
            </li>
            <li>
              comparisons between groups of drugs.
            </li>
          </ul>
          <a
            class="btn"
            data-component="button--primary"
            href="/treatment-summaries/"
          >
            View treatment summaries A to Z
          </a>
        </div>
        <div>
          <h2>
            Interactions
          </h2>
          <p>
            Check for drug interactions. Includes information on the severity of an interaction and the type of evidence to support it.
          </p>
          <a
            class="btn"
            data-component="button--primary"
            href="/interactions/"
          >
            View interactions A to Z
          </a>
        </div>
      </div>
    </div>
    <hr />
    <div
      class="grid grid--loose grid navBlocks"
      data-tracking="browse-by-category"
    >
      <div
        data-component="grid-item"
        data-g="12 md:6"
      >
        <h2>
          <a
            href="/medicines-guidance/"
          >
            Medicines guidance
          </a>
        </h2>
        <p>
          General guidance on prescribing and the use of medicines. Includes guidance on
           
          <a
            href="/medicines-guidance/prescribing-in-palliative-care/"
          >
            prescribing in palliative care
          </a>
          ,
           
          <a
            href="/medicines-guidance/prescription-writing/"
          >
            prescription writing
          </a>
           
          and
           
          <a
            href="/medicines-guidance/prescribing-in-renal-impairment/"
          >
            prescribing in renal impairment
          </a>
          .
        </p>
      </div>
      <div
        data-component="grid-item"
        data-g="12 md:6"
      >
        <h2>
          <a
            href="/wound-management/"
          >
            Wound management
          </a>
        </h2>
        <p>
          Wound management products and elasticated garments. Browse by wound type or product type.
        </p>
      </div>
      <div
        data-component="grid-item"
        data-g="12 md:6"
      >
        <h2>
          <a
            href="/medical-devices/"
          >
            Medical devices
          </a>
        </h2>
        <p>
          Indication, dose and medicinal product information for medical devices. Browse devices by type.
        </p>
      </div>
      <div
        data-component="grid-item"
        data-g="12 md:6"
      >
        <h2>
          <a
            href="/borderline-substances"
          >
            Borderline substances
          </a>
        </h2>
        <p>
          Foods and toilet preparations, that in certain conditions have the characteristics of drugs.
        </p>
      </div>
    </div>
    <hr />
    <div
      class="grid grid--loose grid navBlocks"
      data-tracking="formulary"
    >
      <div
        data-component="grid-item"
        data-g="12 md:6"
      >
        <h2>
          <a
            href="/nurse-prescribers-formulary/"
          >
            Nurse prescribers formulary
          </a>
        </h2>
        <p>
          Medicines approved by the NHS for Nurse Practitioner prescribing.
        </p>
      </div>
      <div
        data-component="grid-item"
        data-g="12 md:6"
      >
        <h2>
          <a
            href="/dental-practitioners-formulary/"
          >
            Dental practitioners formulary
          </a>
        </h2>
        <p>
          Medicines approved by the NHS for dental prescribing. 
        </p>
      </div>
    </div>
    <hr />
    <div
      class="grid grid--loose grid navBlocks"
      data-tracking="reference-tables"
    >
      <div
        data-component="grid-item"
        data-g="12 sm:6 md:4"
      >
        <h2>
          <a
            href="/about/approximate-conversions-and-units/"
          >
            Approximate conversions and units
          </a>
        </h2>
        <p>
          Conversions and units tables. Includes growth chart with average weight and height, by gender and age (neonate, child and adult).
        </p>
      </div>
      <div
        data-component="grid-item"
        data-g="12 sm:6 md:4"
      >
        <h2>
          <a
            href="/about/labels/"
          >
            Cautionary and advisory labels
          </a>
        </h2>
        <p>
          Cautionary, warning and advisory labels applied to medications used in the 
          BNF
          .
        </p>
      </div>
      <div
        data-component="grid-item"
        data-g="12 sm:6 md:4"
      >
        <h2>
          <a
            href="/about/abbreviations-and-symbols/"
          >
            Abbreviations and symbols
          </a>
        </h2>
        <p>
          Glossary of symbols and abbreviations. Includes Latin, medication and dosage abbreviations used in the 
          BNF
           
          and prescribing.
        </p>
      </div>
    </div>
    <hr />
    <ul
      class="inlineList"
      data-tracking="BNF home footer"
    >
      <li>
        <a
          href="/about/changes/"
        >
          What's changed?
        </a>
      </li>
      <li>
        <a
          href="/about/"
        >
          About 
          BNF
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`HomePage should match snapshot for BNFC 1`] = `
<div>
  <div
    class="homeWrapper"
  >
    <div
      class="hero"
      id="content-start"
    >
      <div
        class="heroContainer"
      >
        <nav
          aria-label="Breadcrumbs"
          class="breadcrumbs"
          data-component="breadcrumbs"
          role="navigation"
        >
          <ol
            class="breadcrumbs"
          >
            <li
              class="breadcrumbs__crumb"
            >
              <a
                href="https://www.nice.org.uk/"
              >
                NICE
              </a>
            </li>
            <li
              class="breadcrumbs__crumb"
            >
              <span>
                BNF
              </span>
            </li>
          </ol>
        </nav>
        <script
          type="application/ld+json"
        >
          {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "https://www.nice.org.uk/",
        "name": "NICE"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "name": "BNF"
      }
    }
  ]
}
        </script>
        <div
          class="body"
        >
          <div
            class="text"
          >
            <h1
              class="title"
            >
              British National Formulary
               (
              BNF
              )
            </h1>
            <p
              class="intro"
            >
              Key information on the selection, prescribing, dispensing and administration of medicines.
            </p>
          </div>
          <div
            class="lastUpdated"
            data-tracking="last-updated"
          >
            <h2
              class="lastUpdatedLabel"
            >
              Last updated: 
            </h2>
            <time
              class="lastUpdatedDate"
              datetime="2022-04-06T00:38:57.911"
            >
              6 April 2022
            </time>
            <a
              href="/about/changes/"
            >
              See what's changed
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="grid grid--loose"
      data-tracking="browse-a-to-z"
    >
      <div
        class="drugsColumn"
        data-component="grid-item"
        data-g="12 md:6"
      >
        <h2>
          Drugs
        </h2>
        <p>
          Drug monographs describe the uses, doses, safety issues, medicinal forms and other considerations involved in the use of a drug.
        </p>
        <h3
          class="h4"
        >
          Browse drugs by A to Z
        </h3>
        <ol
          class="alphabet alphabet--chunky alphabet"
          data-tracking="drugs-a-to-z"
          id="a-to-z"
        >
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#a"
            >
              A
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#b"
            >
              B
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#c"
            >
              C
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#d"
            >
              D
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#e"
            >
              E
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#f"
            >
              F
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#g"
            >
              G
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#h"
            >
              H
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#i"
            >
              I
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#j"
            >
              J
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#k"
            >
              K
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#l"
            >
              L
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#m"
            >
              M
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#n"
            >
              N
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#o"
            >
              O
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#p"
            >
              P
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#q"
            >
              Q
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#r"
            >
              R
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#s"
            >
              S
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#t"
            >
              T
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#u"
            >
              U
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#v"
            >
              V
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#w"
            >
              W
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#x"
            >
              X
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#y"
            >
              Y
            </a>
          </li>
          <li
            class="alphabet__letter alphabet__letter--chunky"
            data-component="alphabet-letter--chunky"
          >
            <a
              class="alphabet__link"
              data-component="alphabet"
              href="/drugs/#z"
            >
              Z
            </a>
          </li>
        </ol>
      </div>
      <div
        class="featureColumn"
        data-component="grid-item"
        data-g="12 md:6"
      >
        <div>
          <h2>
            Treatment summaries
          </h2>
          <p>
            Browse an A to Z list of treatment summaries covering:
          </p>
          <ul>
            <li>
              drug use related to a particular body system
            </li>
            <li>
              drug management or treatment of common conditions
            </li>
            <li>
              comparisons between groups of drugs.
            </li>
          </ul>
          <a
            class="btn"
            data-component="button--primary"
            href="/treatment-summaries/"
          >
            View treatment summaries A to Z
          </a>
        </div>
        <div>
          <h2>
            Interactions
          </h2>
          <p>
            Check for drug interactions. Includes information on the severity of an interaction and the type of evidence to support it.
          </p>
          <a
            class="btn"
            data-component="button--primary"
            href="/interactions/"
          >
            View interactions A to Z
          </a>
        </div>
      </div>
    </div>
    <hr />
    <div
      class="grid grid--loose grid navBlocks"
      data-tracking="browse-by-category"
    >
      <div
        data-component="grid-item"
        data-g="12 md:4"
      >
        <h2>
          <a
            href="/medicines-guidance/"
          >
            Medicines guidance
          </a>
        </h2>
        <p>
          General guidance on prescribing and the use of medicines. Includes guidance on
           
          <a
            href="/medicines-guidance/prescribing-in-palliative-care/"
          >
            prescribing in palliative care
          </a>
          ,
           
          <a
            href="/medicines-guidance/prescription-writing/"
          >
            prescription writing
          </a>
           
          and
           
          <a
            href="/medicines-guidance/prescribing-in-renal-impairment/"
          >
            prescribing in renal impairment
          </a>
          .
        </p>
      </div>
      <div
        data-component="grid-item"
        data-g="12 md:4"
      >
        <h2>
          <a
            href="/medical-devices/"
          >
            Medical devices
          </a>
        </h2>
        <p>
          Indication, dose and medicinal product information for medical devices. Browse devices by type.
        </p>
      </div>
      <div
        data-component="grid-item"
        data-g="12 md:4"
      >
        <h2>
          <a
            href="/borderline-substances"
          >
            Borderline substances
          </a>
        </h2>
        <p>
          Foods and toilet preparations, that in certain conditions have the characteristics of drugs.
        </p>
      </div>
    </div>
    <hr />
    <div
      class="grid grid--loose grid navBlocks"
      data-tracking="formulary"
    >
      <div
        data-component="grid-item"
        data-g="12 md:6"
      >
        <h2>
          <a
            href="/nurse-prescribers-formulary/"
          >
            Nurse prescribers formulary
          </a>
        </h2>
        <p>
          Medicines approved by the NHS for Nurse Practitioner prescribing.
        </p>
      </div>
      <div
        data-component="grid-item"
        data-g="12 md:6"
      >
        <h2>
          <a
            href="/dental-practitioners-formulary/"
          >
            Dental practitioners formulary
          </a>
        </h2>
        <p>
          Medicines approved by the NHS for dental prescribing. 
        </p>
      </div>
    </div>
    <hr />
    <div
      class="grid grid--loose grid navBlocks"
      data-tracking="reference-tables"
    >
      <div
        data-component="grid-item"
        data-g="12 sm:6 md:4"
      >
        <h2>
          <a
            href="/about/approximate-conversions-and-units/"
          >
            Approximate conversions and units
          </a>
        </h2>
        <p>
          Conversions and units tables. Includes growth chart with average weight and height, by gender and age (neonate, child and adult).
        </p>
      </div>
      <div
        data-component="grid-item"
        data-g="12 sm:6 md:4"
      >
        <h2>
          <a
            href="/about/labels/"
          >
            Cautionary and advisory labels
          </a>
        </h2>
        <p>
          Cautionary, warning and advisory labels applied to medications used in the 
          BNFC
          .
        </p>
      </div>
      <div
        data-component="grid-item"
        data-g="12 sm:6 md:4"
      >
        <h2>
          <a
            href="/about/abbreviations-and-symbols/"
          >
            Abbreviations and symbols
          </a>
        </h2>
        <p>
          Glossary of symbols and abbreviations. Includes Latin, medication and dosage abbreviations used in the 
          BNFC
           
          and prescribing.
        </p>
      </div>
    </div>
    <hr />
    <ul
      class="inlineList"
      data-tracking="BNFC home footer"
    >
      <li>
        <a
          href="/about/changes/"
        >
          What's changed?
        </a>
      </li>
      <li>
        <a
          href="/about/"
        >
          About 
          BNFC
        </a>
      </li>
    </ul>
  </div>
</div>
`;
